# cs403-semester-project

./: .gitignore  .gitmodules  C++.sublime-settings  CMakeLists.txt  README.md  configure  drive.google.com_.webloc  launch_spencer.bash  manifest.xml  robot_sim_viewer.rviz  test.sh
3rd-party-libs/compsci403_assignment5_helper/: CMakeLists.txt  manifest.xml
3rd-party-libs/compsci403_assignment5_helper/src/: depth_to_laser.cpp  get_transform.cpp
3rd-party-libs/compsci403_assignment5_helper/src/compsci403_assignment5_helper/srv/: _GetTransformationSrv.py  __init__.py
3rd-party-libs/compsci403_assignment5_helper/srv/: GetTransformationSrv.srv
cobot_msgs/src/cobot_msgs/msg/: __init__.py
include/: follow_core.h  kinect_mapper.h  pathfinding.h  tracking.h  util.h
include/cobot_msgs/: CobotDriveMsg.h
mods/: tracking_single_rgbd_sensor.launch
src/: follow_core.cpp
src/libs/: kinect_mapper.cpp  pathfinding.cpp  tracking.cpp
test/: kinect_test.yaml  test_example.cpp  test_kinectmapper.cpp  test_pathfinding.cpp  test_persontrack.cpp
